--- a/Master-Zhao/Master-Zhao.Shell/App.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Master_Zhao.Shell"
-             StartupUri="MainWindow.xaml" Startup="Application_Startup" DispatcherUnhandledException="Application_DispatcherUnhandledException">
+             StartupUri="StartMenu/Flat/FlatStartMenu.xaml" Startup="Application_Startup" DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <!--default startup-->
     <!--MainWindow.xaml-->
     
@@ -11,6 +11,9 @@
     
     <!--win98 test-->
     <!--StartMenu/Win98/Windows98.xaml-->
+    
+    <!--flat start menu test-->
+    <!--StartMenu/Flat/FlatStartMenu.xaml-->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
