update config file

--- a/Master-Zhao/Master-Zhao.Shell/View/Setting/Pages/BackgroundSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Setting/Pages/BackgroundSetting.xaml
@@ -22,6 +22,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition/>
+            <RowDefinition Height="75"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -31,5 +32,12 @@
         <WrapPanel Grid.Row="1" Name="wrap">
            
         </WrapPanel>
+
+        <DockPanel  Grid.Row="2" LastChildFill="False">
+            <Slider Width="120" VerticalAlignment="Center" DockPanel.Dock="Right"  Name="slider_Opacity" Minimum="0" Maximum="255" TickFrequency="1" IsSnapToTickEnabled="True"/>
+            <Label Content="背景透明度" VerticalAlignment="Center" DockPanel.Dock="Right"></Label>
+            <Slider Width="120" VerticalAlignment="Center" DockPanel.Dock="Right" Name="slider_Blur" Minimum="0" Maximum="1" TickFrequency="0.01" IsSnapToTickEnabled="True"/>
+            <Label Content="背景模糊度" VerticalAlignment="Center" DockPanel.Dock="Right"></Label>
+        </DockPanel>
     </Grid>
 </Page>
