--- a/Master-Zhao/Master-Zhao.Shell/StartMenu/WinFlat/WindowsFlat.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/StartMenu/WinFlat/WindowsFlat.xaml
@@ -121,13 +121,72 @@
                     </Border>
                 </Grid>
 
-                <Grid Grid.Row="1" Margin="10">
+                <Grid Grid.Row="1" Margin="10,20,10,10">
                     <Border CornerRadius="10">
-                        <Border.Background>
+                        <!--<Border.Background>
                             <SolidColorBrush Color="#f4f8fe" Opacity=".5"></SolidColorBrush>
-                        </Border.Background>
+                        </Border.Background>-->
                     </Border>
-                    <Label Content="TODO"/>
+                   
+
+                    <Grid>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="35"/>
+                            <RowDefinition Height="45"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Grid.Row="0">
+                            <Label Content="任务" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                           
+                        </Grid>
+
+                        <Grid  Grid.Row="1">
+                            <Label Content="{Binding ElementName=date_picker,Path=SelectedDate}" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"/>
+                            <DatePicker Name="date_picker" Margin="100,0,0,0" Width="30" SelectedDate="2022 10 14" VerticalAlignment="Center"/>
+                        </Grid>
+
+
+                        <ListBox Grid.Row="2" Background="Transparent" BorderThickness="0">
+                            <ListBoxItem>
+                                <Grid MinHeight="35">
+                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                        <RadioButton.Content>
+                                            <TextBlock Text="去西湾红树林公园写代码" TextWrapping="Wrap"></TextBlock>
+                                        </RadioButton.Content>
+                                    </RadioButton>
+                                </Grid>
+                            </ListBoxItem>
+                            <ListBoxItem>
+                                <Grid MinHeight="35">
+                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                        <RadioButton.Content>
+                                            <TextBlock Text="去召唤师峡谷练习跑步" TextWrapping="Wrap"></TextBlock>
+                                        </RadioButton.Content>
+                                    </RadioButton>
+                                </Grid>
+                            </ListBoxItem>
+                            <ListBoxItem>
+                                <Grid MinHeight="35">
+                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                        <RadioButton.Content>
+                                            <TextBlock Text="去白嫖" TextWrapping="Wrap"></TextBlock>
+                                        </RadioButton.Content>
+                                    </RadioButton>
+                                </Grid>
+                            </ListBoxItem>
+                            <ListBoxItem>
+                                <Grid MinHeight="35">
+                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                        <RadioButton.Content>
+                                            <TextBlock Text="去撩妹" TextWrapping="Wrap"></TextBlock>
+                                        </RadioButton.Content>
+                                    </RadioButton>
+                                </Grid>
+                            </ListBoxItem>
+                        </ListBox>
+                    </Grid>
                 </Grid>
             </Grid>
 
