--- a/Master-Zhao/Master-Zhao.Shell/StartMenu/WinFlat/WindowsFlat.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/StartMenu/WinFlat/WindowsFlat.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Master_Zhao.Shell.StartMenu.WinFlat"
         xmlns:blur="clr-namespace:TianXiaTech;assembly=BlurWindow"
         xmlns:controls="clr-namespace:Master_Zhao.Shell.Controls"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Windows Flat" Height="631" Width="624" IsEnableContextMenu="False" 
                  TitleVisibility="Collapsed" IconVisibility="Collapsed" ControlBoxVisibility="Collapsed"
@@ -150,48 +151,57 @@
 
                         <Grid  Grid.Row="1">
                             <Label Content="{Binding ElementName=date_picker,Path=SelectedDate}" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"/>
-                            <DatePicker Name="date_picker" Margin="100,0,0,0" Width="30" SelectedDate="2022 10 14" VerticalAlignment="Center"/>
+                            <DatePicker Name="date_picker" Margin="100,0,0,0" Width="30" SelectedDate="{x:Static sys:DateTime.Today}" VerticalAlignment="Center" SelectedDateChanged="date_picker_SelectedDateChanged"/>
                         </Grid>
 
 
-                        <ListBox Grid.Row="2" Background="Transparent" BorderThickness="0">
-                            <ListBoxItem>
-                                <Grid MinHeight="35">
-                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
-                                        <RadioButton.Content>
-                                            <TextBlock Text="去西湾红树林公园写代码" TextWrapping="Wrap"></TextBlock>
-                                        </RadioButton.Content>
-                                    </RadioButton>
-                                </Grid>
-                            </ListBoxItem>
-                            <ListBoxItem>
-                                <Grid MinHeight="35">
-                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
-                                        <RadioButton.Content>
-                                            <TextBlock Text="去召唤师峡谷练习跑步" TextWrapping="Wrap"></TextBlock>
-                                        </RadioButton.Content>
-                                    </RadioButton>
-                                </Grid>
-                            </ListBoxItem>
-                            <ListBoxItem>
-                                <Grid MinHeight="35">
-                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
-                                        <RadioButton.Content>
-                                            <TextBlock Text="去白嫖" TextWrapping="Wrap"></TextBlock>
-                                        </RadioButton.Content>
-                                    </RadioButton>
-                                </Grid>
-                            </ListBoxItem>
-                            <ListBoxItem>
-                                <Grid MinHeight="35">
-                                    <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
-                                        <RadioButton.Content>
-                                            <TextBlock Text="去撩妹" TextWrapping="Wrap"></TextBlock>
-                                        </RadioButton.Content>
-                                    </RadioButton>
-                                </Grid>
-                            </ListBoxItem>
-                        </ListBox>
+                        <Grid Grid.Row="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition Height="30"/>
+                            </Grid.RowDefinitions>
+
+                            <ListBox Grid.Row="0" Background="Transparent" BorderThickness="0" Name="list_todo">
+                                <ListBoxItem>
+                                    <Grid MinHeight="35">
+                                        <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                            <RadioButton.Content>
+                                                <TextBlock Text="去西湾红树林公园写代码" TextWrapping="Wrap"></TextBlock>
+                                            </RadioButton.Content>
+                                        </RadioButton>
+                                    </Grid>
+                                </ListBoxItem>
+                                <ListBoxItem>
+                                    <Grid MinHeight="35">
+                                        <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                            <RadioButton.Content>
+                                                <TextBlock Text="去召唤师峡谷练习跑步" TextWrapping="Wrap"></TextBlock>
+                                            </RadioButton.Content>
+                                        </RadioButton>
+                                    </Grid>
+                                </ListBoxItem>
+                                <ListBoxItem>
+                                    <Grid MinHeight="35">
+                                        <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                            <RadioButton.Content>
+                                                <TextBlock Text="去白嫖" TextWrapping="Wrap"></TextBlock>
+                                            </RadioButton.Content>
+                                        </RadioButton>
+                                    </Grid>
+                                </ListBoxItem>
+                                <ListBoxItem>
+                                    <Grid MinHeight="35">
+                                        <RadioButton VerticalAlignment="Center" HorizontalAlignment="Center">
+                                            <RadioButton.Content>
+                                                <TextBlock Text="去撩妹" TextWrapping="Wrap"></TextBlock>
+                                            </RadioButton.Content>
+                                        </RadioButton>
+                                    </Grid>
+                                </ListBoxItem>
+                            </ListBox>
+
+                            <Button Grid.Row="1" Content="+" Width="25" Height="25" HorizontalAlignment="Right" Margin="0,0,5,0" VerticalAlignment="Center" Style="{StaticResource ButtonStyle}" Click="btn_AddTodoClick"/>
+                        </Grid>
                     </Grid>
                 </Grid>
             </Grid>
